# practica2_TAR

./: .gitignore
ros2_ws/install/maze_pkg/lib/maze_pkg/: res_maze
ros2_ws/install/turtlebot3_msgs/share/ament_index/resource_index/rust_packages/: turtlebot3_msgs
ros2_ws/install/turtlebot3_msgs/share/turtlebot3_msgs/rust/: Cargo.toml  build.rs
ros2_ws/install/turtlebot3_msgs/share/turtlebot3_msgs/rust/src/: action.rs  lib.rs  msg.rs  srv.rs
ros2_ws/install/turtlebot3_msgs/share/turtlebot3_msgs/rust/src/action/: rmw.rs
ros2_ws/install/turtlebot3_msgs/share/turtlebot3_msgs/rust/src/msg/: rmw.rs
ros2_ws/install/turtlebot3_msgs/share/turtlebot3_msgs/rust/src/srv/: rmw.rs
ros2_ws/log/: latest_build
ros2_ws/src/maze_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/maze_pkg/launch/: custom_maze.launch.py
ros2_ws/src/maze_pkg/maze_pkg/: res_maze.py
ros2_ws/src/maze_pkg/worlds/: custom_maze.world
ros2_ws/src/p3_pkg/: package.xml  setup.py
ros2_ws/src/p3_pkg/p3_pkg/: aparcamiento.py  movimiento.py
