<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maze_pkg</name>
  <version>0.0.1</version>
  <description>Resolucion autonoma de laberintos con Turtlebot 3 usando LiDAR.</description>

  <maintainer email="carlos@example.com">Carlos</maintainer>
  <license>Apache-2.0</license>

  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
